--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "pomodoro-vue",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.2.37"
+    "check": "vue-tsc --noEmit",
+    "watch": "vue-tsc --noEmit --watch",
+    "test": "vitest --run",
+    "format": "prettier src --write"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
-    "vue-tsc": "^0.38.4"
+    "vue-tsc": "^0.38.4",
+    "prettier": "^2.7.1",
+    "vitest": "^0.20.3"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.6.7",
+    "@heroicons/vue": "^1.0.6",
+    "@xieyuheng/ty": "^0.1.17",
+    "vue": "^3.2.37",
+    "howler": "^2.2.3",
+    "lodash": "^4.17.21",
+    "tailwindcss": "^3.1.7",
+    "utility-types": "^3.10.0"
   }
 }
