--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.7",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
-    "vue-tsc": "^0.38.4",
-    "prettier": "^2.7.1",
-    "vitest": "^0.20.3"
+    "vitest": "^0.20.3",
+    "vue-tsc": "^0.38.4"
   },
   "dependencies": {
     "@headlessui/vue": "^1.6.7",
     "@heroicons/vue": "^1.0.6",
     "@xieyuheng/ty": "^0.1.17",
-    "vue": "^3.2.37",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
-    "tailwindcss": "^3.1.7",
-    "utility-types": "^3.10.0"
+    "utility-types": "^3.10.0",
+    "vue": "^3.2.37"
   }
 }
