--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
     "utility-types": "^3.10.0",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.3"
   }
 }
