--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier src --write"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.7",
     "@vitejs/plugin-vue": "^3.0.0",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.14",
