--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "devDependencies": {
     "@types/howler": "^2.2.7",
-    "@vitejs/plugin-vue": "^3.0.0",
+    "@vitejs/plugin-vue": "^3.0.1",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.7",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.0",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.4",
     "vitest": "^0.20.3",
-    "vue-tsc": "^0.38.4"
+    "vue-tsc": "^0.39.4"
   },
   "dependencies": {
     "@headlessui/vue": "^1.6.7",
@@ -27,6 +27,7 @@
     "@xieyuheng/ty": "^0.1.17",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
+    "ohmyfetch": "^0.4.18",
     "utility-types": "^3.10.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
