--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "dist/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "/",
+      "status": 200
+    }
   ]
 }
