--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@heroicons/vue": "^1.0.6",
     "@vueuse/head": "^0.7.9",
     "@xieyuheng/ty": "^0.1.17",
-    "tailwindcss": "^3.1.8",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
+    "tailwindcss": "^3.1.8",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
@@ -27,6 +27,7 @@
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
     "vite": "^3.0.4",
+    "vite-plugin-pwa": "^0.12.3",
     "vitest": "^0.21.0",
     "vue-tsc": "^0.39.5"
   }
