--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
     "dev": "vite",
     "build": "vite build",
     "check": "vue-tsc --noEmit",
-    "watch": "vue-tsc --noEmit --watch",
-    "test": "vitest --run",
+    "check:watch": "while true; do vue-tsc --noEmit --watch && break; done",
+    "check:ts": "tsc --noEmit",
+    "check:ts:watch": "tsc --noEmit --watch",
     "format": "prettier src --write"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.6.7",
-    "@heroicons/vue": "^1.0.6",
-    "@vueuse/head": "^0.7.9",
-    "@xieyuheng/ty": "^0.1.17",
+    "@headlessui/vue": "^1.7.10",
+    "@heroicons/vue": "^2.0.16",
+    "@vueuse/head": "^1.0.26",
+    "@xieyuheng/ty": "^0.1.21",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
-    "tailwindcss": "^3.1.8",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "tailwindcss": "^3.2.7",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/howler": "^2.2.7",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.8",
-    "vite-plugin-pwa": "^0.12.3",
-    "vitest": "^0.22.0",
-    "vue-tsc": "^0.40.1"
+    "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.4",
+    "vite-plugin-pwa": "^0.14.4",
+    "vitest": "^0.28.5",
+    "vue-tsc": "^1.1.7"
   }
 }
