--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "check:watch": "while true; do vue-tsc --noEmit --watch && break; done",
     "check:ts": "tsc --noEmit",
     "check:ts:watch": "tsc --noEmit --watch",
-    "format": "prettier src --write"
+    "format": "prettier src --write",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.10",
     "@heroicons/vue": "^2.0.16",
     "@vueuse/head": "^1.0.26",
+    "path-browserify": "^1.0.1",
     "@xieyuheng/ty": "^0.1.21",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
@@ -21,14 +23,20 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "husky": "^8.0.3",
     "@types/howler": "^2.2.7",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@types/path-browserify": "^1.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.2.3",
+    "pretty-quick": "^3.1.3",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
     "vite-plugin-pwa": "^0.14.4",
+    "vite-plugin-rewrite-all": "^1.0.1",
     "vitest": "^0.28.5",
     "vue-tsc": "^1.1.7"
   }
