--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.10",
     "@heroicons/vue": "^2.0.16",
+    "@vueuse/core": "^9.13.0",
     "@vueuse/head": "^1.0.26",
     "path-browserify": "^1.0.1",
     "@xieyuheng/ty": "^0.1.21",
