--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "api:dev": "fidb serve database",
     "build": "vite build",
     "check": "vue-tsc --noEmit",
     "check:watch": "while true; do vue-tsc --noEmit --watch && break; done",
@@ -15,20 +16,21 @@
     "@heroicons/vue": "^2.0.17",
     "@vueuse/core": "^9.13.0",
     "@vueuse/head": "^1.1.23",
-    "path-browserify": "^1.0.1",
     "@xieyuheng/ty": "^0.1.22",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
+    "path-browserify": "^1.0.1",
     "tailwindcss": "^3.3.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "husky": "^8.0.3",
     "@types/howler": "^2.2.7",
-    "@vitejs/plugin-vue": "^4.1.0",
     "@types/path-browserify": "^1.0.0",
+    "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
+    "fidb": "^0.1.2",
+    "husky": "^8.0.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-organize-imports": "^3.2.2",
