--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "vite",
     "api": "fidb serve database",
     "build": "vite build",
-    "check": "vue-tsc --noEmit",
-    "check:watch": "while true; do vue-tsc --noEmit --watch && break; done",
-    "check:ts": "tsc --noEmit",
-    "check:ts:watch": "tsc --noEmit --watch",
+    "check:vue": "vue-tsc --noEmit",
+    "check:vue:watch": "while true; do vue-tsc --noEmit --watch && break; done",
+    "check": "tsc --noEmit",
+    "check:watch": "tsc --noEmit --watch",
     "format": "prettier src --write",
     "prepare": "husky install"
   },
@@ -37,12 +37,12 @@
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
-    "prettier-plugin-tailwindcss": "^0.2.7",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "pretty-quick": "^3.1.3",
     "typescript": "^5.0.4",
     "vite": "^4.3.3",
     "vite-plugin-rewrite-all": "^1.0.1",
     "vitest": "^0.30.1",
-    "vue-tsc": "^1.6.0"
+    "vue-tsc": "^1.6.1"
   }
 }
