--- a/package.json
+++ b/package.json
@@ -11,38 +11,36 @@
     "check:vue:watch": "while true; do vue-tsc --noEmit --watch && break; done",
     "check": "tsc --noEmit",
     "check:watch": "tsc --noEmit --watch",
-    "format": "prettier src --write",
-    "prepare": "husky install"
+    "format": "prettier src --write"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.14",
     "@heroicons/vue": "^2.0.18",
-    "@vueuse/core": "^10.1.2",
+    "@vueuse/core": "^10.2.1",
     "@vueuse/head": "^1.1.26",
     "@xieyuheng/ty": "^0.1.22",
     "howler": "^2.2.3",
     "lodash": "^4.17.21",
     "path-browserify": "^1.0.1",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@types/howler": "^2.2.7",
     "@types/path-browserify": "^1.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
-    "fidb": "^0.1.5",
-    "husky": "^8.0.3",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "prettier-plugin-organize-imports": "^3.2.2",
-    "prettier-plugin-tailwindcss": "^0.3.0",
+    "fidb": "^0.1.7",
+    "postcss": "^8.4.26",
+    "prettier": "^3.0.0",
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "prettier-plugin-tailwindcss": "^0.4.0",
     "pretty-quick": "^3.1.3",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.3",
     "vite-plugin-rewrite-all": "^1.0.1",
-    "vitest": "^0.32.0",
-    "vue-tsc": "^1.6.5"
+    "vitest": "^0.33.0",
+    "vue-tsc": "^1.8.4"
   }
 }
