--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "vite",
     "api": "fidb serve database",
     "build": "vite build",
-    "check:vue": "vue-tsc --noEmit",
-    "check:vue:watch": "while true; do vue-tsc --noEmit --watch && break; done",
-    "check": "tsc --noEmit",
-    "check:watch": "tsc --noEmit --watch",
+    "check": "vue-tsc --noEmit",
+    "check:watch": "while true; do vue-tsc --noEmit --watch && break; done",
+    "check:ts": "tsc --noEmit",
+    "check:ts:watch": "tsc --noEmit --watch",
     "format": "prettier src --write"
   },
   "dependencies": {
